--- a/src/app/pages/teacher/teacher.component.html
+++ b/src/app/pages/teacher/teacher.component.html
@@ -1,5 +1,4 @@
-<webui-header>
-    <div class="container">
-        <router-outlet></router-outlet>
-    </div>
-</webui-header>
+<webui-teacher-nav>
+    <router-outlet></router-outlet>
+</webui-teacher-nav>
+
