--- a/src/app/components/homework-dialog/homework-dialog.component.scss
+++ b/src/app/components/homework-dialog/homework-dialog.component.scss
@@ -7,6 +7,7 @@ header, footer {
   button {
     background-color: #cccccc;
     margin-right: 3rem;
+    transform: scale(0.8);
     &:hover {
       background-color: #e91e63;
     }
@@ -45,7 +46,7 @@ footer {
 
 @media screen and (max-width: 479px) {
   button {
-    transform: scale(0.6);
+    transform: scale(0.55) !important;
     margin-right: 1rem !important;
   }
   h1 {
