--- a/src/app/containers/student-profile/student-profile.component.html
+++ b/src/app/containers/student-profile/student-profile.component.html
@@ -1,4 +1,4 @@
-<mat-card>
+<mat-dialog-content>
 
   <mat-card-header>
     <div>
@@ -14,19 +14,39 @@
   <mat-card-content>
     <form [formGroup]="profile" (ngSubmit)="onSubmit()">
       <mat-form-field>
-        <input matInput placeholder="Ім'я" formControlName="firstname">
+        <input
+          matInput
+          placeholder="Ім'я"
+          [value]="student.firstname || student.firstName"
+          disabled
+        >
       </mat-form-field>
 
       <mat-form-field>
-        <input matInput placeholder="Прізвище" formControlName="lastname">
+        <input
+          matInput
+          placeholder="Прізвище"
+          [value]="student.lastname || student.lastName"
+          disabled
+        >
       </mat-form-field>
 
       <mat-form-field>
-        <input matInput placeholder="По батькові" formControlName="patronymic">
+        <input
+          matInput
+          placeholder="По батькові"
+          [value]="student.patronymic"
+          disabled
+        >
       </mat-form-field>
 
       <mat-form-field>
-        <input matInput placeholder="Логін" formControlName="login">
+        <input
+          matInput
+          placeholder="Логін"
+          [value]="student.login"
+          disabled
+        >
       </mat-form-field>
 
       <mat-form-field>
@@ -39,18 +59,22 @@
         >
         <mat-datepicker-toggle matSuffix [for]="datepicker"></mat-datepicker-toggle>
         <mat-datepicker #datepicker></mat-datepicker>
+        <mat-error *ngIf="this.profile.get('dateOfBirth').invalid">Введіть дату народження</mat-error>
       </mat-form-field>
 
       <mat-form-field>
         <input matInput placeholder="Електронна скринька" formControlName="email">
+        <mat-error *ngIf="this.profile.get('email').invalid">example@example.com</mat-error>
       </mat-form-field>
 
       <mat-form-field>
         <input matInput placeholder="Телефон" formControlName="phone">
+        <mat-error *ngIf="this.profile.get('phone').invalid">+380501112233</mat-error>
       </mat-form-field>
 
       <mat-form-field>
         <input matInput type="password" placeholder="Старий пароль" formControlName="oldPass">
+        <mat-error *ngIf="this.profile.get('oldPass').invalid">Пароль повинен містити від 5 до 16 символів</mat-error>
       </mat-form-field>
 
       <mat-form-field>
@@ -58,13 +82,13 @@
       </mat-form-field>
 
       <mat-form-field class="confirm-password">
-        <input matInput type="password" placeholder="Підтвердіть новий пароль" formControlName="newPass">
+        <input matInput type="password" placeholder="Підтвердіть новий пароль">
       </mat-form-field>
 
       <mat-card-actions>
-        <button mat-button type="submit">Зберегти</button>
+        <button mat-button type="submit" [disabled]="!profile.valid">Зберегти</button>
       </mat-card-actions>
     </form>
   </mat-card-content>
 
-</mat-card>
+</mat-dialog-content>
