--- a/src/app/components/form-generator/form-generator.component.scss
+++ b/src/app/components/form-generator/form-generator.component.scss
@@ -1,6 +1,10 @@
 form {
-  width: 100vw;
+  width: 100%;
+  display: flex;
+  flex-wrap: wrap;
+  flex-direction: row;
 }
+
 .avatar,
 .avatar-hover {
   height: 150px;
