--- a/src/app/containers/new-year/new-year.component.html
+++ b/src/app/containers/new-year/new-year.component.html
@@ -3,84 +3,89 @@
     [currentYear]="year" (emitWithStudents)="isWithStudentsSubject$.next($event)">
   </webui-new-year-controll>
 
-  <div class="info-title" *ngIf="!(transferClasses.length > 0 && isLoaded); else transferClassesTable">
-    В цьому році класи відсутні
-  </div>
-  <ng-template #transferClassesTable>
-    <table class="active-table" mat-table [dataSource]="transferClassesData" multiTemplateDataRows>
+  <table class="active-table" mat-table [dataSource]="transferClassesData" multiTemplateDataRows
+    *ngIf="transferClassesData.filteredData.length > 0; else noClasses">
 
-      <ng-container matColumnDef="button">
-        <th mat-header-cell *matHeaderCellDef>
-          <button mat-raised-button color="accent" (click)="transferAllClasses(yearSubject$.value)">
-            Перевести всі
-          </button>
-        </th>
-        <td mat-cell *matCellDef="let element">
-          <button mat-raised-button color="primary" click-stop-propagation
-            (click)="transferClassesFunc([element], yearSubject$.value)">
-            Перевести
-          </button>
-        </td>
-      </ng-container>
-      <ng-container matColumnDef="name">
-        <th mat-header-cell *matHeaderCellDef>
-          Клас
-        </th>
-        <td mat-cell *matCellDef="let element">
-          {{element.className}}
-        </td>
-      </ng-container>
-      <ng-container matColumnDef="number">
-        <th mat-header-cell *matHeaderCellDef>
-          Кількість учнів
-        </th>
-        <td mat-cell *matCellDef="let element">
-          {{element.numOfStudents}}
-        </td>
-      </ng-container>
+    <ng-container matColumnDef="button">
+      <th mat-header-cell *matHeaderCellDef>
+        <button mat-raised-button color="accent" (click)="transferAllClasses(yearSubject$.value)">
+          Перевести всі
+        </button>
+      </th>
+      <td mat-cell *matCellDef="let element">
+        <button mat-raised-button color="primary" click-stop-propagation
+          (click)="transferClassesFunc([element], yearSubject$.value)">
+          Перевести
+        </button>
+      </td>
+    </ng-container>
+    <ng-container matColumnDef="name">
+      <th mat-header-cell *matHeaderCellDef>
+        Клас
+      </th>
+      <td mat-cell *matCellDef="let element">
+        {{element.className}}
+      </td>
+    </ng-container>
+    <ng-container matColumnDef="number">
+      <th mat-header-cell *matHeaderCellDef>
+        Кількість учнів
+      </th>
+      <td mat-cell *matCellDef="let element">
+        {{element.numOfStudents}}
+      </td>
+    </ng-container>
 
-      <ng-container matColumnDef="newClassName">
-        <th mat-header-cell *matHeaderCellDef>
-          Новий клас
-        </th>
-        <td mat-cell *matCellDef="let element">
-          {{generateClassName(element.className) | isGraduation}}
-        </td>
-      </ng-container>
+    <ng-container matColumnDef="newClassName">
+      <th mat-header-cell *matHeaderCellDef>
+        Новий клас
+      </th>
+      <td mat-cell *matCellDef="let element">
+        {{generateClassName(element.className) | isGraduation}}
+      </td>
+    </ng-container>
 
-      <ng-container matColumnDef="select">
-        <th mat-header-cell *matHeaderCellDef>
-          <button mat-raised-button color="accent" (click)="transferSelectdClasses(yearSubject$.value)">
-            Перевести вибрані
-          </button>
-        </th>
-        <td mat-cell *matCellDef="let row">
-          <mat-checkbox (click)="$event.stopPropagation()" (change)="$event ? selection.toggle(row) : null"
-            [checked]="selection.isSelected(row)">
-          </mat-checkbox>
-        </td>
-      </ng-container>
+    <ng-container matColumnDef="select">
+      <th mat-header-cell *matHeaderCellDef>
+        <button mat-raised-button color="accent" (click)="transferSelectdClasses(yearSubject$.value)">
+          Перевести вибрані
+        </button>
+      </th>
+      <td mat-cell *matCellDef="let row">
+        <mat-checkbox (click)="$event.stopPropagation()" (change)="$event ? selection.toggle(row) : null"
+          [checked]="selection.isSelected(row)">
+        </mat-checkbox>
+      </td>
+    </ng-container>
 
-      <ng-container matColumnDef="expandedDetail">
-        <td mat-cell *matCellDef="let element" [attr.colspan]="5">
-          <div class="element-detail" [@detailExpand]="element == expandedElement ? 'expanded' : 'collapsed'">
-            <webui-transfer-students-table [studentsList]='transferStudents[element.className]'
-              [className]='element.className'></webui-transfer-students-table>
-          </div>
-        </td>
-      </ng-container>
+    <ng-container matColumnDef="expandedDetail">
+      <td mat-cell *matCellDef="let element" [attr.colspan]="5">
+        <div class="element-detail" [@detailExpand]="element == expandedElement ? 'expanded' : 'collapsed'">
+          <webui-transfer-students-table [studentsList]='transferStudents[element.className]'
+            [className]='element.className'></webui-transfer-students-table>
+        </div>
+      </td>
+    </ng-container>
 
-      <tbody>
-        <tr mat-header-row *matHeaderRowDef="displayedColumns; sticky: true"></tr>
-        <tr mat-row *matRowDef="let element; columns: displayedColumns;" class="element-row"
-          [class.expanded-row]="expandedElement === element"
-          (click)="expandedElement = expandedElement === element ? null : element">
-        </tr>
-        <tr mat-row *matRowDef="let row; columns: ['expandedDetail']" class="detail-row"></tr>
-      </tbody>
-    </table>
-    <mat-paginator [pageSizeOptions]="[8, 20, 40]" showFirstLastButtons></mat-paginator>
-  </ng-template>
+    <tbody>
+      <tr mat-header-row *matHeaderRowDef="displayedColumns; sticky: true"></tr>
+      <tr mat-row *matRowDef="let element; columns: displayedColumns;" class="element-row"
+        [class.expanded-row]="expandedElement === element"
+        (click)="expandedElement = expandedElement === element ? null : element">
+      </tr>
+      <tr mat-row *matRowDef="let row; columns: ['expandedDetail']" class="detail-row"></tr>
+    </tbody>
+  </table>
+  <mat-paginator [pageSizeOptions]="[8, 20, 40]" showFirstLastButtons></mat-paginator>
 
 </div>
-<webui-transfered-classes-table [transferedClasses]='transferedClasses$ | async'></webui-transfered-classes-table>
+
+<ng-template #noClasses>
+  <mat-spinner class="new-year-spinner" *ngIf="isLoading; else noClassesTitle"></mat-spinner>
+  <ng-template #noClassesTitle>
+    <div class="info-title">В цьому році відсутні класи для переведення</div>
+  </ng-template>
+</ng-template>
+<webui-transfered-classes-table [transferedClasses]='transferedClasses$ | async'>
+
+</webui-transfered-classes-table>
