--- a/src/app/components/current-user/current-user.component.html
+++ b/src/app/components/current-user/current-user.component.html
@@ -3,7 +3,7 @@
     <div class="mask">
         <img src={{currentUserData.avatar}}  alt="User avatar">
     </div>
-    <h3>{{currentUserData.firstname}} {{currentUserData.lastname}}</h3>
+    <h3>{{currentUserData.firstname || currentUserData.firstName }} {{currentUserData.lastname || currentUserData.lastName}}</h3>
     <p>{{currentUserData.login}}</p>
     <h4>{{_currentUser.userRole()}}</h4>
     <br>
