--- a/src/app/components/form-generator/form-generator.component.html
+++ b/src/app/components/form-generator/form-generator.component.html
@@ -7,6 +7,7 @@
   <ng-template ngFor let-input [ngForOf]="formPattern">
     <ng-container [ngSwitch]="input.controlType">
       <ng-template [ngSwitchCase]="'file'">
+        <div class="image-block">
         <div
           class="avatar"
           [style.background-image]="'url(' + avatar + ')'"
@@ -25,6 +26,7 @@
           (change)="onSelectAvatar($event)"
           [hidden]="true"
         />
+      </div>
       </ng-template>
       <ng-template [ngSwitchCase]="'text'">
         <div class="form-group">
