--- a/src/app/containers/teacher-subjects/teacher-subjects.component.scss
+++ b/src/app/containers/teacher-subjects/teacher-subjects.component.scss
@@ -45,11 +45,12 @@ table .mat-form-field {
 table .mat-card {
   border-bottom: #673ab7;
   border-bottom-style: solid;
-  border-bottom-width: 5px;
+  border-bottom-width: 5px; 
   width: 100%;
   border-radius: 0;
   padding: 10px 0 0 0;
   margin-bottom: 10px;
+  
 }
 .subject-detail {
   overflow: hidden;
@@ -63,11 +64,11 @@ td.mat-cell:first-of-type {
 }
 
 tr.subject-detail-row {
-  height: 0;
+  height: 0; 
 }
 
 tr.subject-row:not(.subject-expanded-row):hover {
-  background: #f1f3f4;
+  background: #F1F3F4;
   cursor: pointer;
 }
 
