--- a/src/app/components/teachers/teacher-journal/teacher-journal.component.html
+++ b/src/app/components/teachers/teacher-journal/teacher-journal.component.html
@@ -34,6 +34,6 @@
     </mat-autocomplete>
   </mat-form-field>
   <mat-card-actions>
-    <button mat-button type="submit" (click)="teacherJournalBind($event)" [disabled]="bindTeacherJournal.invalid"> Зберегти </button>
+    <button mat-button type="submit" (click)="submitJournalBind($event)" [disabled]="bindTeacherJournal.invalid"> Зберегти </button>
   </mat-card-actions>
 </form>
