--- a/src/app/containers/schedule/schedule.component.scss
+++ b/src/app/containers/schedule/schedule.component.scss
@@ -23,6 +23,11 @@ mat-panel-title {
     width: 0;
 }
 
+mat-panel-description {
+    width: min-content;
+    padding-left: 15px;
+}
+
 .error-message {
     font-size: 11px;
     color: rgba(255, 0, 0, 0.6);
@@ -35,6 +40,12 @@ mat-form-field {
 
 .term-class-year-div {
     margin-bottom: 10px;
+    text-align: center;
+
+    .term-class-year-item {
+        display: inline-block;
+        vertical-align: text-top;
+    }
 
     .input-year {
         width: 3em;
