changed background-color in diary table

--- a/src/app/containers/student-diary/student-diary.component.scss
+++ b/src/app/containers/student-diary/student-diary.component.scss
@@ -30,7 +30,7 @@
         }
         td {
           padding: .5rem;
-          background: #f0f0f0;
+          background: #ecf0f1;
           text-align: center;
           mat-icon {
             vertical-align: middle;
