--- a/src/app/components/custom-error/custom-error.component.html
+++ b/src/app/components/custom-error/custom-error.component.html
@@ -1,9 +1,19 @@
 <div class="error-container">
   <div class="error-top-row">
     <div class="error-message">{{message}}</div>
-    <button mat-button (click)="showDetails()" *ngIf="buttonSwitcher === 'details'; else closeBtn">
-      {{"Деталі" | uppercase}}
-    </button>
+    <div class="buttons">
+      <button mat-mini-fab color="accent" class="details-btn" (click)="showDetails()"
+        *ngIf="buttonSwitcher === 'details'; else closeBtn">
+        <i class="material-icons">
+          info
+        </i>
+      </button>
+      <button mat-mini-fab color="warn" class="close-btn" (click)="closeNotification()">
+        <i class="material-icons">
+          close
+        </i>
+      </button>
+    </div>
   </div>
   <ng-template [ngIf]="isInfoShown">
     <div class="error-info">{{error.message}}</div>
@@ -11,5 +21,4 @@
 </div>
 
 <ng-template #closeBtn>
-  <button mat-button (click)="closeNotification()">{{"Закрити" | uppercase}}</button>
 </ng-template>
