--- a/src/app/components/current-user/current-user.component.html
+++ b/src/app/components/current-user/current-user.component.html
@@ -1,7 +1,8 @@
 <ng-container *ngIf="currentUser$ | async as currentUserData">
   <div class="user-info">
     <div class="mask">
-        <img src={{currentUserData.avatar}}  alt="User avatar">
+        <img *ngIf="currentUserData.avatar !== null"src={{currentUserData.avatar}}  alt="User avatar">
+        <img *ngIf="currentUserData.avatar == null" src="../../../../../assets/images/no-user-image.png" alt="">
     </div>
     <h3>{{currentUserData.firstname || currentUserData.firstName }} {{currentUserData.lastname || currentUserData.lastName}}</h3>
     <p>{{currentUserData.login}}</p>
