changing teacher-nav

--- a/src/app/pages/teacher/teacher.component.html
+++ b/src/app/pages/teacher/teacher.component.html
@@ -1,4 +1,4 @@
-<webui-teacher-nav>
+<webui-header>
+    <webui-teacher-nav></webui-teacher-nav>
     <router-outlet></router-outlet>
-</webui-teacher-nav>
-
+</webui-header>
