--- a/src/app/containers/teacher-panel-journals/teacher-panel-journals.component.scss
+++ b/src/app/containers/teacher-panel-journals/teacher-panel-journals.component.scss
@@ -1,14 +1,15 @@
 .main-container {
     width: 100%;
+    height: 400px;//this value is temporary
   }
   .header {
     display: flex;
     justify-content: center;
     background-color: #673ab7;
-    width: 90%;
+    width: 80%;
     color: white;
     padding: 10px 0;
-    margin: 20px auto 10px auto;
+    margin: 5px auto 10px auto;
   }
   .header div {
     padding: 6px;
@@ -22,7 +23,7 @@
     display: flex;
     flex-direction: column;
     align-self: center;
-    width: 90%;
+    width: 80%;
     margin: 0 auto 20px auto;
   }
   table {
