--- a/src/app/components/mark-component/mark-component.component.html
+++ b/src/app/components/mark-component/mark-component.component.html
@@ -7,9 +7,9 @@
 <mat-accordion>
     <mat-expansion-panel>
         <mat-expansion-panel-header>
-            Добавити оцінку
+            Добавити тип оцінки
         </mat-expansion-panel-header>
-        <webui-add-mark></webui-add-mark>
+        <webui-add-mark (postData)="postMark($event)"></webui-add-mark>
     </mat-expansion-panel>
 </mat-accordion>
 
@@ -17,7 +17,6 @@
     <table mat-table [dataSource]="marksList" multiTemplateDataRows class="mat-elevation-z8">
         <ng-container matColumnDef="{{column}}" *ngFor="let column of columnsToDisplay">
             <th mat-header-cell *matHeaderCellDef>{{column | localeHeader}}
-                <webui-sort-button [columnName]="column"></webui-sort-button>
             </th>
             <td mat-cell *matCellDef="let mark"> {{mark[column]}} </td>
         </ng-container>
@@ -26,7 +25,7 @@
         <ng-container matColumnDef="expandedDetail">
             <td mat-cell *matCellDef="let mark" [attr.colspan]="columnsToDisplay.length" >
                 <div class="mark-detail" [@detailExpand]="mark === expandedElement ? 'expanded' : 'collapsed'">
-                    <webui-add-mark *ngIf="mark == expandedElement"></webui-add-mark>
+                    <webui-edit-mark *ngIf="mark == expandedElement" [markType]="mark" (putMark)="putMark($event)"></webui-edit-mark>
                 </div>
             </td>
         </ng-container>
@@ -40,3 +39,5 @@
     </table>
 
     <mat-paginator [pageSizeOptions]="[5, 10, 15, 20]" showFirstLastButtons></mat-paginator>
+</div>
+    <webui-disabled-marks [disabledMarksList]="marksDisabled" (editMark)="putMark($event)"></webui-disabled-marks>
