--- a/src/app/components/new-year-controll/new-year-controll.component.scss
+++ b/src/app/components/new-year-controll/new-year-controll.component.scss
@@ -1,5 +1,6 @@
 .controll-panel {
-  background-color: #fff;
+  background-color: var(--light-color);
+  color: var(--font-color);
   border-radius: 5px;
   padding: 8px 15px;
   display: flex;
