--- a/src/app/components/theme-picker/theme-picker.component.scss
+++ b/src/app/components/theme-picker/theme-picker.component.scss
@@ -9,6 +9,7 @@
   border-radius: 4px;
   animation: fadein .4s;
   color: var(--font-color);
+  border: 3px solid var(--dark-color);
 }
 
 mat-radio-group {
