--- a/src/app/components/teachers/teacher-card/teacher-card.component.scss
+++ b/src/app/components/teachers/teacher-card/teacher-card.component.scss
@@ -4,7 +4,7 @@
   left: 0;
   width: 100%;
   height: 10px;
-  background-color: #673ab7;
+  background-color: var(--alternative-accent-color);
 }
 .mat-card {
   position: relative;
@@ -53,8 +53,8 @@ mat-card-actions {
   justify-content: flex-end;
   
   &>button:enabled{
-    background-color: #673AB7;
-    color: white !important;
+    background-color: var(--light-color);
+    color: var(--font-color) !important;
   }
 }
 
