--- a/src/app/containers/schedule/daily-schedule/daily-schedule.component.scss
+++ b/src/app/containers/schedule/daily-schedule/daily-schedule.component.scss
@@ -3,7 +3,7 @@ mat-form-field {
 }
 
 .lesson-div {
-    background-color: #f8f8f8;
+    background-color: var(--light-color);
     margin-bottom: 3px;
     padding: 5px;
     border-radius: 5px;
@@ -17,7 +17,7 @@ mat-form-field {
 .lesson-field {
     display: inline-block;
     border-radius: 5px;
-    border: 1px solid #eee;
+    border: 1px solid var(--main-color);
 }
 
 .remove {
@@ -25,5 +25,5 @@ mat-form-field {
 }
 
 .add {
-    color: rgb(15, 102, 0);
+    color: var(--accent-color);
 }
