--- a/src/app/containers/schedule/schedule.component.scss
+++ b/src/app/containers/schedule/schedule.component.scss
@@ -1,9 +1,9 @@
 .header {
     display: flex;
     justify-content: center;
-    background-color: #673ab7;
+    background-color: var(--dark-color);
     width: 90%;
-    color: white;
+    color: var(--contrast-font-color);
     padding: 0.6rem 0;
     margin: 15px auto;
     
@@ -58,7 +58,7 @@ mat-form-field {
 
 .date-div {
     font-size: 12px;
-    color: #aaa;
+    color: var(--light-color);
     margin: 0 10px 10px 10px;
 
     mat-form-field {
@@ -72,7 +72,7 @@ button {
 
 .schedule-time {
     font-size: 12px;
-    color: #aaa;
+    color: var(--light-color);
     margin: 10px;
 }
 
