--- a/src/app/pages/students/students.component.scss
+++ b/src/app/pages/students/students.component.scss
@@ -28,8 +28,8 @@ mat-icon {
   display: flex;
   width: 100%;
   height: 50px;
-  color: white;
-  background-color: #673ab7;
+  background-color: var(--dark-color);
+  color: var(--contrast-font-color);
   justify-content: center;
   align-items: center;
   h3 {
@@ -48,11 +48,13 @@ tr.example-detail-row {
 }
 
 tr.example-element-row:not(.example-expanded-row):hover {
-  background: #f5f5f5;
+  background: var(--light-color);
+  color: var(--font-color);
 }
 
 tr.example-element-row:not(.example-expanded-row):active {
-  background: #efefef;
+  background: var(--light-color);
+  color: var(--font-color);
 }
 
 .example-element-row td {
