--- a/src/app/pages/students/students.component.html
+++ b/src/app/pages/students/students.component.html
@@ -1,5 +1,10 @@
 <div class="heading">
   <div class="students-heading"><h3>Список учнів</h3></div>
+
+  <div class="search">
+    <webui-load-students></webui-load-students>
+  </div>
+  <webui-create-student></webui-create-student>
   <div class="search">
     <mat-form-field>
       <input
@@ -9,7 +14,6 @@
       />
     </mat-form-field>
   </div>
-  <webui-create-student></webui-create-student>
 </div>
 
 <div class="div-table mat-elevation-z8">
